--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+.container {
+  text-align: center;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 1vmin);
+  color: rgb(0, 0, 0);
+  margin-top: 5vh;
+}
+
 .App {
   text-align: center;
 }
